--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -54,6 +54,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/new-orlean-vs-golden-star.jpg" alt="New-Orlean-vs-Golden-Star">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Постер New Orlean vs Golden Star</h2>
                     <p class="services-text">Дизайн</p>
@@ -61,6 +64,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/seafood.jpg" alt="Seafood">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Ресторан Seafood</h2>
                     <p class="services-text">Додаток</p>
@@ -68,6 +74,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/prime.jpg" alt="Prime">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Проєкт Prime</h2>
                     <p class="services-text">Маркетинг</p>
@@ -75,6 +84,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/boxes.jpg" alt="Boxes">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Проєкт Boxes</h2>
                     <p class="services-text">Додаток</p>
@@ -82,6 +94,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/inspiration-has-no-borders.jpg" alt="Inspiration-has-no-Borders">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Inspiration has no Borders</h2>
                     <p class="services-text">Веб-сайт</p>
@@ -89,6 +104,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/limited-edition.jpg" alt="Limited-Edition">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Видання Limited Edition</h2>
                     <p class="services-text">Дизайн</p>
@@ -96,6 +114,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/lab.jpg" alt="LAB">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Проєкт LAB</h2>
                     <p class="services-text">Маркетинг</p>
@@ -103,6 +124,9 @@
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/growing-business.jpg" alt="Growing-Business">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Growing Business</h2>
                     <p class="services-text">Додаток</p>
