--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <h2 class="newsletter-title">Підпишіться на розсилку</h2>
                     <form class="newsletter-form">
                         <label class="newsletter-label">
-                            <input type="text" placeholder="E-mail" class="newsletter-input" required>
+                            <input type="email" placeholder="E-mail" class="newsletter-input" required>
                         </label>
                         <button class="newsletter-button" required>Підписатися
                         <svg class="newsletter-svg">
