--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -43,18 +43,18 @@
             </ul>
             <ul class="portfolio-list">
                 <li class="services-item">
+                <div class="services-im">
                     <img class="services-img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
-                    <div class="services-div">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                    </div>
+                    <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
                     <div class="services-box">
                     <h2 class="services-caption">Технокряк</h2>
                     <p class="services-text">Веб-сайт</p>
                 </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/new-orlean-vs-golden-star.jpg" alt="New-Orlean-vs-Golden-Star">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/new-orlean-vs-golden-star.jpg" alt="New Orlean vs Golden Star">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
@@ -63,8 +63,8 @@
                 </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/seafood.jpg" alt="Seafood">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/seafood.jpg" alt="Seafood">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
@@ -73,8 +73,8 @@
                     </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/prime.jpg" alt="Prime">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/prime.jpg" alt="Prime">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
@@ -83,8 +83,8 @@
                     </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/boxes.jpg" alt="Boxes">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/boxes.jpg" alt="Boxes">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
@@ -93,8 +93,8 @@
                     </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/inspiration-has-no-borders.jpg" alt="Inspiration-has-no-Borders">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/inspiration-has-no-borders.jpg" alt="Borders">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
@@ -103,8 +103,8 @@
                     </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/limited-edition.jpg" alt="Limited-Edition">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/limited-edition.jpg" alt="edition">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
@@ -113,8 +113,8 @@
                     </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/lab.jpg" alt="LAB">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/lab.jpg" alt="LAB">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
@@ -123,8 +123,8 @@
                     </div>
                 </li>
                 <li class="services-item">
-                    <img class="services-img" src="../img/growing-business.jpg" alt="Growing-Business">
-                    <div class="services-div">
+                    <div class="services-im">
+                        <img class="services-img" src="../img/growing-business.jpg" alt="Business">
                         <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="services-box">
