--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- секція герой -->
         <section class="hero">
             <div class="container">
-                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <h1 class="hero-title" data-aos="fade-left">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="hero-btn" data-aos="zoom-out-down" data-modal-open>Замовити послугу</button>
             </div>
         </section>
