--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -16,17 +16,17 @@
 <body>
     <header class="header">
         <div class="container">
-            <nav class="header-nav">
-                <a class="header-logo" href="./index.html">Web<span class="header-span">Studio</span></a>
-                <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Студія</a></li>
-                    <li class="nav-item"><a class="nav-link current" href="../pages/portfolio.html">Портфоліо</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+            <nav class="header__nav">
+                <a class="header__logo" href="./index.html">Web<span class="header__span">Studio</span></a>
+                <ul class="nav__list">
+                    <li class="nav__item"><a class="nav__link" href="../index.html">Студія</a></li>
+                    <li class="nav__item"><a class="nav__link current" href="../pages/portfolio.html">Портфоліо</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="header-list">
-                <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com"><svg class="header-contact"><use href="../img/symbol-defs.svg#envelope"></use></svg><span class="header-cont">info@devstudio.com</span></a></li>
-                <li class="header-item"><a class="header-link" href="tel:+380961111111"><svg class="header-contact"><use href="../img/symbol-defs.svg#smartphone"></use></svg><span class="header-cont">+38 096 111 11 11</span></a></li>
+            <ul class="header__list">
+                <li class="header__item"><a class="header__link" href="mailto:info@devstudio.com"><svg class="header__contact"><use href="../img/symbol-defs.svg#envelope"></use></svg><span class="header__cont">info@devstudio.com</span></a></li>
+                <li class="header__item"><a class="header__link" href="tel:+380961111111"><svg class="header__contact"><use href="../img/symbol-defs.svg#smartphone"></use></svg><span class="header__cont">+38 096 111 11 11</span></a></li>
             </ul>
         </div>
     </header>
@@ -138,49 +138,49 @@
     </main>
 
     <footer class="footer">
-        <div class="container footer-box">
+        <div class="container footer__box">
             <div>
-                <a class="footer-logo" href="../index.html">Web<span class="logo-footer">Studio</span></a>
+                <a class="footer__logo" href="../index.html">Web<span class="logo__footer">Studio</span></a>
                 <address class="addres">
-                    <a class="footer-addres"
+                    <a class="footer__addres"
                         href="https://www.google.com/maps/search/площа+Лесі+Українки,+26,+Киев/@50.4269816,30.5366207,17z/data=!3m1!4b1?entry=ttu">м.
                         Київ, пр-т Лесі
                         Українки, 26</a>
-                    <ul class="addres-list">
-                        <li class="addres-item"><a class="addres-link"
+                    <ul class="addres__list">
+                        <li class="addres__item"><a class="addres__link"
                                 href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="addres-item"><a class="addres-link" href="tel:+380961111111">+38 096 111 11
+                        <li class="addres__item"><a class="addres__link" href="tel:+380961111111">+38 096 111 11
                                 11</a></li>
                     </ul>
                 </address>
             </div>
             <div>
-                <h2 class="footer-title">ПРИЄДНУЙТЕСЬ</h2>
-                    <ul class="footer-list">
-                        <li class="footer-item">
-                            <a href="https://www.instagram.com/" class="social-link">
-                                <svg class="footer-icon">
+                <h2 class="footer__title">ПРИЄДНУЙТЕСЬ</h2>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a href="https://www.instagram.com/" class="social__link">
+                                <svg class="footer__icon">
                                     <use href="../img/symbol-defs.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-item">
-                            <a href="https://x.com/?lang=ru" class="social-link">
-                                <svg class="footer-icon">
+                        <li class="footer__item">
+                            <a href="https://x.com/?lang=ru" class="social__link">
+                                <svg class="footer__icon">
                                     <use href="../img/symbol-defs.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-item">
-                            <a href="https://uk-ua.facebook.com/" class="social-link">
-                                <svg class="footer-icon">
+                        <li class="footer__item">
+                            <a href="https://uk-ua.facebook.com/" class="social__link">
+                                <svg class="footer__icon">
                                     <use href="../img/symbol-defs.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-item">
-                            <a href="https://ua.linkedin.com/" class="social-link">
-                                <svg class="footer-icon">
+                        <li class="footer__item">
+                            <a href="https://ua.linkedin.com/" class="social__link">
+                                <svg class="footer__icon">
                                     <use href="../img/symbol-defs.svg#linkedin"></use>
                                 </svg>
                             </a>
@@ -188,13 +188,13 @@
                     </ul>
                 </div>
                 <div class="newsletter">
-                    <h2 class="newsletter-title">Підпишіться на розсилку</h2>
-                    <form class="newsletter-form">
-                        <label class="newsletter-label">
-                            <input type="text" placeholder="E-mail" class="newsletter-input" required>
+                    <h2 class="newsletter__title">Підпишіться на розсилку</h2>
+                    <form class="newsletter__form">
+                        <label class="newsletter__label">
+                            <input type="text" placeholder="E-mail" class="newsletter__input" required>
                         </label>
-                        <button class="newsletter-button" required>Підписатися
-                        <svg class="newsletter-svg">
+                        <button class="newsletter__button" required>Підписатися
+                        <svg class="newsletter__svg">
                             <use href="../img/symbol-defs.svg#telegram"></use>
                         </svg>
                         </button>
