--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="modal__box">
               <label class="modal__lab">Ім'я
                 <input type="text" class="modal__inp" required />
-                <svg class="model__svg">
+                <svg class="modal__svg">
                     <use href="./img/symbol-defs.svg#person"></use>
                 </svg>
             </label>
@@ -338,7 +338,7 @@
             <div class="modal__box">
               <label class="modal__lab">Телефон
                 <input type="tel" class="modal__inp" required />
-                <svg class="model__svg">
+                <svg class="modal__svg">
                     <use href="./img/symbol-defs.svg#phone"></use>
                 </svg>
             </label>
@@ -346,7 +346,7 @@
             <div class="modal__box">
               <label class="modal__lab">Пошта
                 <input type="email" class="modal__inp" required />
-                <svg class="model__svg">
+                <svg class="modal__svg">
                     <use href="./img/symbol-defs.svg#mail"></use>
                 </svg>
             </label>
